src/objects/Cancelled_VOLI__c.object
<CustomObject>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>Cancelled VOLIs</relationshipLabel>
        <relationshipName>Cancelled_VOLIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>Part__r.Last_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Excess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Excess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_From_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is From Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_required_For_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is required For Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cancelled_VOLIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Line_Item_Cost__c</fullName>
        <label>Line Item Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding__c</fullName>
        <label>Outstanding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Cancelled VOLIs</relationshipLabel>
        <relationshipName>Cancelled_VOLIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Delivery__c</fullName>
        <label>Projected Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qty_Needed__c</fullName>
        <label>Qty Needed</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Ordered__c</fullName>
        <label>Qty Ordered</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received__c</fullName>
        <label>Received Qty</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>On Order</fullName>
                </value>
                <value>
                    <fullName>Partially Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <formula>Part__r.Vendor__r.Vendor_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Order Header</label>
        <referenceTo>Vendor_Order_Header__c</referenceTo>
        <relationshipLabel>Cancelled VOLIs</relationshipLabel>
        <relationshipName>Cancelled_VOLIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Order_Line_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Order Line Item Group</label>
        <referenceTo>Vendor_Order_Line_Item_Group__c</referenceTo>
        <relationshipLabel>Cancelled VOLIs</relationshipLabel>
        <relationshipName>Cancelled_VOLIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Receiving_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Receiving Group</label>
        <referenceTo>Vendor_Receiving_Group__c</referenceTo>
        <relationshipLabel>Cancelled VOLIs</relationshipLabel>
        <relationshipName>Cancelled_VOLIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cancelled VOLI</label>
    <nameField>
        <displayFormat>CVOLI-{00000000}</displayFormat>
        <label>Cancelled VOLI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancelled VOLIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>